Add Admin link to navigation menu

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,8 @@
         <a href="./services.html">Services</a>
         <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
+        <a href="./admin_login.html">Admin</a>
+        
         <div class="mobile-contact">
           <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
           <button class="get-started-btn"><a href="./register.html">Get Started</a></button>
