Update content and structure for About, Review, and Services pages; enhance CSS styles for buttons and links.

--- a/client/about.html
+++ b/client/about.html
@@ -36,7 +36,7 @@
   </header>
 
   <section class="hero">
-    <h1>About CareerConnect</h1>
+    <h1>About PlaceXis Technology</h1>
     <p>We're passionate about connecting talented professionals with their dream careers through personalized placement
       services and comprehensive career support.</p>
   </section>
