--- a/client/services.html
+++ b/client/services.html
@@ -50,7 +50,7 @@
         <li>Professional Design</li>
         <li>Multiple Versions</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
 
     <div class="service-card" style="--color: #30b847">
@@ -62,7 +62,7 @@
         <li>Industry Insights</li>
         <li>Confidence Building</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
 
     <div class="service-card" style="--color: #f77f00">
@@ -74,7 +74,7 @@
         <li>Exclusive Opportunities</li>
         <li>Perfect Matches</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
 
     <div class="service-card" style="--color: #6c63ff">
@@ -86,7 +86,7 @@
         <li>Growth Strategies</li>
         <li>Professional Development</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
 
     <div class="service-card" style="--color: #d63384">
@@ -98,7 +98,7 @@
         <li>Competency Mapping</li>
         <li>Development Plans</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
 
     <div class="service-card" style="--color: #6f42c1">
@@ -110,7 +110,7 @@
         <li>Networking Support</li>
         <li>Growth Planning</li>
       </ul>
-      <button>Get Started →</button>
+      <button><a href="./register.html">Get Started →</a></button>
     </div>
   </section>
 
