Refactor code structure for improved readability and maintainability

--- a/client/index.html
+++ b/client/index.html
@@ -126,7 +126,7 @@
           <li>Industry Keywords</li>
           <li>Professional Design</li>
         </ul>
-        <button class="learn-more">Learn More <span>&rarr;</span></button>
+        <button class="learn-more"><a href="./services.html">Learn More <span>&rarr;</span></a></button>
       </div>
 
       <!-- Interview Coaching Card -->
@@ -142,7 +142,7 @@
           <li>Behavioral Questions</li>
           <li>Industry Insights</li>
         </ul>
-        <button class="learn-more">Learn More <span>&rarr;</span></button>
+        <button class="learn-more"><a href="./services.html">Learn More <span>&rarr;</span></a></button>
       </div>
 
       <!-- Job Matching Card -->
@@ -158,7 +158,7 @@
           <li>Career Goals</li>
           <li>Exclusive Opportunities</li>
         </ul>
-        <button class="learn-more">Learn More <span>&rarr;</span></button>
+        <button class="learn-more"><a href="./services.html">Learn More <span>&rarr;</span></a></button>
       </div>
     </div>
 
