--- a/client/about.html
+++ b/client/about.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <link rel="stylesheet" href="./css/about.css">
   <title>About US</title>
 </head>
@@ -24,6 +27,7 @@
         <a href="./index.html">Home</a>
         <a href="./about.html" class="active">About</a>
         <a href="./services.html">Services</a>
+        <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
         <div class="mobile-contact">
           <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
@@ -211,7 +215,9 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
   <script>
+
     const menuIcon = document.getElementById("menu-icon");
     const navbarMenu = document.getElementById("navbar-menu");
 
