--- a/client/review_form.html
+++ b/client/review_form.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/review.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <title>Review</title>
 </head>
 
@@ -22,8 +24,9 @@
 
       <nav class="navbar-menu" id="navbar-menu">
         <a href="./index.html">Home</a>
-        <a href="./about.html" class="active">About</a>
+        <a href="./about.html" >About</a>
         <a href="./services.html">Services</a>
+        <a href="./review_form.html" class="active">Review</a>
         <a href="./contect.html">Contact</a>
         <div class="mobile-contact">
           <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
@@ -197,6 +200,118 @@
         document.getElementById("reviewResponse").textContent = "❌ Failed to submit review.";
       }
     });
+
+    const menuIcon = document.getElementById("menu-icon");
+    const navbarMenu = document.getElementById("navbar-menu");
+
+    menuIcon.addEventListener("click", () => {
+      navbarMenu.classList.toggle("show");
+    });
+    window.addEventListener("resize", () => {
+      if (window.innerWidth > 768) {
+        navbarMenu.classList.remove("show");
+      }
+    });
+
+
+    const chatToggle = document.getElementById('chatToggle');
+    const chatWindow = document.getElementById('chatWindow');
+    let isChatOpen = false;
+
+    window.addEventListener("load", () => {
+      chatWindow.style.display = 'none';
+      isChatOpen = false;
+    });
+
+    chatToggle.addEventListener('click', () => {
+      isChatOpen = !isChatOpen;
+      chatWindow.style.display = isChatOpen ? 'flex' : 'none';
+    });
+    const API_KEY = "AIzaSyAKWyFcFlT94XUhnNJDYC42x7TyvWnPk4U"; // 🔒 Replace with your actual Gemini API key
+
+    const placementKeywords = [
+      "resume", "interview", "placement", "job", "career", "cv",
+      "guidance", "hired", "skills", "assessment", "match", "recruitment"
+    ];
+
+    function isPlacementRelated(input) {
+      const lower = input.toLowerCase();
+      return placementKeywords.some(k => lower.includes(k));
+    }
+
+    async function getGeminiResponse(inputText) {
+      const url = "https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=" + API_KEY;
+
+      const payload = {
+        contents: [
+          {
+            parts: [{ text: inputText }]
+          }
+        ]
+      };
+
+      const response = await fetch(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(payload)
+      });
+
+      const data = await response.json();
+      const text = data?.candidates?.[0]?.content?.parts?.[0]?.text || "Sorry, I couldn't understand that.";
+      return text;
+    }
+
+    // Called when user sends a message
+    async function sendMessage() {
+      const input = userInput.value.trim();
+      if (!input) return;
+
+      appendMessage("You", input, "user");
+      userInput.value = "";
+
+      if (!isPlacementRelated(input)) {
+        appendMessage("Bot", "I'm trained to answer only placement-related questions. Please ask about jobs, resumes, or interviews.", "bot");
+        return;
+      }
+
+      appendMessage("Bot", "Typing...", "bot");
+
+      try {
+        const reply = await getGeminiResponse(input);
+
+        // Replace 'Typing...' with real response
+        const lastMsg = chatBody.querySelectorAll("div")[chatBody.querySelectorAll("div").length - 1];
+        lastMsg.innerHTML = `<div style="background-color: #E6E6E6; padding: 10px 14px; border-radius: 20px; max-width: 75%; font-size: 14px;">${reply}</div>`;
+      } catch (err) {
+        appendMessage("Bot", "Oops! Couldn't connect to Gemini. Try again later.", "bot");
+        console.error(err);
+      }
+    }
+
+    function appendMessage(sender, message, type) {
+      const msgWrapper = document.createElement("div");
+      msgWrapper.style.display = "flex";
+      msgWrapper.style.justifyContent = type === "user" ? "flex-end" : "flex-start";
+
+      const bubble = document.createElement("div");
+      bubble.style.maxWidth = "75%";
+      bubble.style.padding = "10px 14px";
+      bubble.style.borderRadius = "20px";
+      bubble.style.marginBottom = "4px";
+      bubble.style.whiteSpace = "pre-wrap";
+      bubble.style.lineHeight = "1.5";
+      bubble.style.fontSize = "14px";
+      bubble.style.boxShadow = "0 1px 4px rgba(0,0,0,0.1)";
+      bubble.style.backgroundColor = type === "user" ? "#DCF8C6" : "#E6E6E6";
+      bubble.style.color = "#111";
+
+      bubble.innerText = message;
+      msgWrapper.appendChild(bubble);
+      chatBody.appendChild(msgWrapper);
+      chatBody.scrollTop = chatBody.scrollHeight;
+    }
   </script>
 
 </body>
