--- a/client/services.html
+++ b/client/services.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/services.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <title>Services</title>
 </head>
 
@@ -24,6 +26,7 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./services.html" class="active">Services</a>
+        <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
         <div class="mobile-contact">
           <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
