Update hero section title and description in contact page

--- a/client/contect.html
+++ b/client/contect.html
@@ -38,8 +38,8 @@
     </div>
   </header>
   <section class="hero">
-    <h1>Our Services</h1>
-    <p>Comprehensive career services designed to accelerate your job search and unlock your professional potential.</p>
+    <h1>Contact Us</h1>
+    <p>Ready to take the next step in your career? Get in touch with our team of experts.</p>
   </section>
 
   <div class="container">
