Enhance navigation and styling across multiple pages; add Admin link and update CSS for improved layout and consistency.

--- a/client/admin.html
+++ b/client/admin.html
@@ -143,8 +143,8 @@
     <h3>Edit Slider</h3>
     <form id="editSliderForm">
       <input type="hidden" id="editSliderId" />
-      <input type="text" id="editTitle" placeholder="Slider Title" required />
-      <input type="text" id="editDescription" placeholder="Slider Description" required />
+      <input type="text" id="editTitle" placeholder="Slider Title" />
+      <input type="text" id="editDescription" placeholder="Slider Description" />
       <input type="file" id="editImage" accept="image/*" />
       <button type="submit">💾 Save Changes</button>
       <button type="button" onclick="closeEditModal()">❌ Cancel</button>
