--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,6 @@
     <div class="navbar-container">
       <div class="navbar-left">
         <img src="./images/logo.jpg" alt="Logo" class="logo" />
-        <span class="brand-name">PlaceXis Technology</span>
       </div>
 
       <div class="menu-icon" id="menu-icon">
@@ -36,7 +35,8 @@
         <a href="./admin_login.html">Admin</a>
         
         <div class="mobile-contact">
-          <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
+          <i class="fa fa-phone"></i>
+          <span class="phone"> +18389382173</span>
           <button class="get-started-btn"><a href="./register.html">Get Started</a></button>
         </div>
       </nav>
@@ -319,7 +319,7 @@
       <!-- Logo and Description -->
       <div style="flex: 1; min-width: 220px; margin-bottom: 30px;">
         <div style="display: flex; align-items: center; gap: 10px;">
-          <div style="background-color: #1F6FEB; padding: 10px; border-radius: 8px;">
+          <div style="background-color: #1a72b2; padding: 10px; border-radius: 8px;">
             <img src="https://img.icons8.com/ios-filled/30/ffffff/conference-call.png" alt="icon" />
           </div>
           <h3 style="margin: 0;">PlaceXis Technology</h3>
@@ -379,9 +379,9 @@
       style="border-top: 1px solid #21262d; padding-top: 20px; margin-top: 20px; text-align: center; color: #8b949e;">
       <p>© 2025 CareerConnect. All rights reserved.</p>
       <div style="margin-top: 10px;">
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none; ">Privacy Policy</a>
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none;">Terms of Service</a>
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none;">Cookie Policy</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none; ">Privacy Policy</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none;">Terms of Service</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none;">Cookie Policy</a>
       </div>
     </div>
 
