--- a/client/services.html
+++ b/client/services.html
@@ -15,7 +15,6 @@
     <div class="navbar-container">
       <div class="navbar-left">
         <img src="./images/logo.jpg" alt="Logo" class="logo" />
-        <span class="brand-name">PlaceXis Technology</span>
       </div>
 
       <div class="menu-icon" id="menu-icon">
@@ -28,8 +27,11 @@
         <a href="./services.html" class="active">Services</a>
         <a href="./review_form.html">Review</a>
         <a href="./contect.html">Contact</a>
+        <a href="./admin_login.html">Admin</a>
+        
         <div class="mobile-contact">
-          <span class="phone"><i class="fa fa-phone"></i> +18389382173</span>
+          <i class="fa fa-phone"></i>
+          <span class="phone"> +18389382173</span>
           <button class="get-started-btn"><a href="./register.html">Get Started</a></button>
         </div>
       </nav>
@@ -223,9 +225,9 @@
       style="border-top: 1px solid #21262d; padding-top: 20px; margin-top: 20px; text-align: center; color: #8b949e;">
       <p>© 2025 CareerConnect. All rights reserved.</p>
       <div style="margin-top: 10px;">
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none; ">Privacy Policy</a>
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none;">Terms of Service</a>
-        <a href="#" style="color: #58a6ff; margin: 0 10px; text-decoration: none;">Cookie Policy</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none; ">Privacy Policy</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none;">Terms of Service</a>
+        <a href="#" style="color: #1a72b2; margin: 0 10px; text-decoration: none;">Cookie Policy</a>
       </div>
     </div>
 
