Refactor code structure for improved readability and maintainability

--- a/client/admin.html
+++ b/client/admin.html
@@ -155,8 +155,8 @@
 <section id="addSliderSection">
   <h3>Add New Slider</h3>
   <form id="sliderForm" enctype="multipart/form-data">
-    <input type="text" name="title" placeholder="Slider Title" required />
-    <input type="text" name="description" placeholder="Slider Description" required />
+    <input type="text" name="title" placeholder="Slider Title" />
+    <input type="text" name="description" placeholder="Slider Description" />
     <input type="file" name="image" accept="image/*" required />
     <button type="submit">➕ Add Slider</button>
   </form>
