Remove unnecessary comments and improve section visibility in admin dashboard; load contacts on DOMContentLoaded.

--- a/client/admin.html
+++ b/client/admin.html
@@ -233,23 +233,13 @@
         <th>Name</th><th>Email</th><th>Phone</th><th>Message</th><th>Submitted</th>
       </tr>
     </thead>
-    <tbody id="contactTableBody"></tbody> <!-- THIS ID -->
+    <tbody id="contactTableBody"></tbody> 
   </table>
 </section>
 
 
 
 
-
-
-
-
-    <!-- Settings Section -->
-    <section id="settings" class="content-section" style="display:none;">
-      <h2>System Settings</h2>
-      <p>Manage admin preferences and system configuration.</p>
-    </section>
-  </main>
 
   <script>
     function showSection(sectionId) {
