Fix typo in button label for contact messages section in admin dashboard

--- a/client/admin.html
+++ b/client/admin.html
@@ -63,7 +63,7 @@
         <div class="actions">
           <h3>Quick Actions</h3>
           <button class="action-btn primary" onclick="showSection('sliders')">Add New Slider</button>
-          <button class="action-btn" onclick="showSection('contacts')">Review Messages</button>
+          <button class="action-btn" onclick="showSection('contacts')">Show Contect</button>
           <h1>Export Data</h1>
           <div class="export-buttons">
             <button onclick="window.location.href='/api/export-users'">Export Users</button>
