Update section titles to reflect branding change from CareerConnect to PlaceXis Technology

--- a/client/index.html
+++ b/client/index.html
@@ -171,7 +171,7 @@
 
   <section class="why-choose-section">
     <div class="choose-header">
-      <h2>Why Choose CareerConnect?</h2>
+      <h2>Why Choose PlaceXis Technology?</h2>
       <p>We're committed to your success with proven methods, expert guidance, and personalized support.</p>
     </div>
 
