--- a/client/register.html
+++ b/client/register.html
@@ -53,7 +53,7 @@
       <div class="flex justify-center mb-4">
         <img src="./images/user.svg" alt="Logo" class="w-16 h-16 rounded-full" />
       </div>
-      <h1 class="text-4xl font-bold">Join CareerConnect</h1>
+      <h1 class="text-4xl font-bold">Join PlaceXis Technology</h1>
       <p class="mt-2 text-lg">
         Start your journey to career success. Create your profile and get matched with your dream job.
       </p>
