--- a/client/index.html
+++ b/client/index.html
@@ -340,11 +340,11 @@
         <h4>Quick Links</h4>
         <ul
           style="list-style: none; padding: 0; line-height: 1.8; font-weight: 200; font-size: 16px; margin-top: 45px;">
-          <li>Home</li>
-          <li>About Us</li>
-          <li>Services</li>
-          <li>Contact</li>
-          <li>Register</li>
+          <li><a href="index.html" style="text-decoration: none; color: #fff;">Home</a></li>
+          <li><a href="about.html" style="text-decoration: none; color: #fff;">About Us</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;">Services</a></li>
+          <li><a href="contect.html" style="text-decoration: none; color: #fff;">Contact</a></li>
+          <li><a href="register.html" style="text-decoration: none; color: #fff;">Register</a></li>
         </ul>
       </div>
 
@@ -353,11 +353,11 @@
         <h4>Our Services</h4>
         <ul
           style="list-style: none; padding: 0; line-height: 1.8; font-weight: 200; font-size: 16px; margin-top: 45px;">
-          <li>Resume Optimization</li>
-          <li>Interview Coaching</li>
-          <li>Job Matching</li>
-          <li>Career Guidance</li>
-          <li>Skill Assessment</li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Resume Optimization</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Interview Coaching</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Job Matching</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Career Guidance</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Skill Assessment</a></li>
         </ul>
       </div>
 
@@ -401,7 +401,7 @@
 
         <!-- Header -->
         <div style="background-color: #0D1117; color: white; padding: 14px; font-weight: 600; font-size: 16px;">
-          PlaceXis Bot
+          Chat With PlaceXis Expert
         </div>
 
         <!-- Chat Body -->
@@ -419,8 +419,10 @@
         </div>
       </div>
     </div>
-  </footer>
 
+    
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="./images/top.svg"></img></button> 
+</footer>
 
 
   <script src="js/main.js"></script>
@@ -428,6 +430,25 @@
     const chatToggle = document.getElementById('chatToggle');
     const chatWindow = document.getElementById('chatWindow');
     let isChatOpen = false;
+
+    let mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
 
     window.addEventListener("load", () => {
       chatWindow.style.display = 'none';
