Refactor service list styling for improved consistency across multiple HTML files

--- a/client/services.html
+++ b/client/services.html
@@ -196,12 +196,12 @@
       <div style="flex: 1; min-width: 180px; margin-bottom: 30px;">
         <h4>Our Services</h4>
         <ul
-          style="list-style: none; padding: 0; line-height: 1.8; font-weight: 200; font-size: 16px; margin-top: 45px;">
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Resume Optimization</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Interview Coaching</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Job Matching</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Career Guidance</a></li>
-          <li><a href="services.html" style="text-decoration: none; color: #fff;"></a>Skill Assessment</a></li>
+          style="list-style: none; padding: 0; line-height: 1.8; font-weight: 200; font-size: 16px; margin-top: 45px; text-decoration: none; color: #fff;">
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Resume Optimization</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Interview Coaching</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Job Matching</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Career Guidance</a></li>
+          <li><a href="services.html" style="text-decoration: none; color: #fff;"class="footer-link">Skill Assessment</a></li>
         </ul>
       </div>
 
