--- a/client/about.html
+++ b/client/about.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <link rel="stylesheet" href="./css/about.css">
-  <title>About US</title>
+  <title>About US</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
 </head>
 
 <body>
