--- a/client/admin.html
+++ b/client/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Dashboard</title>
+  <title>Admin Dashboard</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
   <link rel="stylesheet" href="./css/admin.css" />
 </head>
 <body>
