--- a/client/admin_login.html
+++ b/client/admin_login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Login</title>
+  <title>Admin Login</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
   <style>
     * {
       box-sizing: border-box;
