--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="css/style.css" />
   <title>Hire Pathway Connect</title>
+  <link rel="icon" type="image/x-icon" href="./images/pt.jpg">
 </head>
 
 <body>
