--- a/client/register.html
+++ b/client/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PlaceXis Technology - Register</title>
+    <title>PlaceXis Technology - Register</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
     <link rel="stylesheet" href="./css/register.css">
     <link
       rel="stylesheet"
