--- a/client/services.html
+++ b/client/services.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/services.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <title>Services</title>
+  <title>Services</title><link rel="icon" type="image/x-icon" href="./images/pt.jpg">
 </head>
 
 <body>
